# Speech-vs-Plan

./: .gitignore  README.md  get_access_token.py  gigachat_request.py  pyproject.toml
data/outbox_audio2text/: transcript.txt
docs/: conf.py
docs/source/: conf.py
documentation/: DOCUMENTATION.md
prompts/: compare_plan.md
src/: analyze.py  cli.py  md_docx_to_json.py  parse_form.py  transcribe.py
src/cloudapi/output/: transcribe.py
src/cloudapi/output/google/api/: annotations_pb2_grpc.py  http_pb2.py  http_pb2_grpc.py
src/cloudapi/output/google/rpc/: status_pb2.py  status_pb2_grpc.py
src/cloudapi/output/yandex/cloud/ai/stt/v2/: stt_service_pb2.py  stt_service_pb2_grpc.py
src/cloudapi/output/yandex/cloud/api/: operation_pb2.py  operation_pb2_grpc.py
src/cloudapi/output/yandex/cloud/operation/: operation_pb2.py  operation_pb2_grpc.py
src/templates/: form.html  start_window.html  step_one.html  step_three.html  step_two.html  upload_plan.html
src/templates/css/: form.css  start_window.css  step_one.css  step_three.css  step_two.css  upload_audio.css
src/templates/html/: form.html  start_window.html  step_one.html  step_three.html  step_two.html  upload_audio.html  upload_plan.html
src/templates/js/: form.js  step_three.js  step_two.js  upload_audio.js  upload_plan.js
src/uploaded_plans/: lecture_9_plan.md
